--- a/CW3/CW3/CW3.csproj
+++ b/CW3/CW3/CW3.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Models\" />
     <Folder Include="DAL\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+    <PackageReference Include="System.Collections" Version="4.3.0" />
+  </ItemGroup>
 </Project>
